# Ambience1.0.1

./: .gitignore  Ambience.jucer  CMakeLists.txt  README.md
Builds/MacOSX/: Info-VST3.plist  Info-VST3_Manifest_Helper.plist
Builds/MacOSX/Ambience.xcodeproj/: project.pbxproj
Builds/MacOSX/Ambience.xcodeproj/project.xcworkspace/xcuserdata/szkstudio.xcuserdatad/: UserInterfaceState.xcuserstate
Builds/MacOSX/Ambience.xcodeproj/xcshareddata/xcschemes/: Ambience - All.xcscheme  Ambience - VST3.xcscheme
Builds/MacOSX/Ambience.xcodeproj/xcuserdata/szkstudio.xcuserdatad/xcschemes/: xcschememanagement.plist
JuceLibraryCode/: BinaryData.h  JuceHeader.h  JucePluginDefines.h
Source/: AlgorithmPresets.h  PluginEditor.cpp  PluginEditor.h  PluginParameters.h  PluginProcessor.cpp  PluginProcessor.h  PresetManager.cpp
Source/DSP/: AcousticMetrics.cpp  AcousticMetrics.h  BiquadFilters.cpp  BiquadFilters.h  DSPConstants.h  EarlyReflections.h  MagnitudeResponseFitter.cpp  MagnitudeResponseFitter.h  Saturator.h  UniversalEngine.cpp  UniversalEngine.h
Source/GUI/: DecayCurveViz.cpp  DecayCurveViz.h
